--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,3 +37,20 @@ jobs:
         run: pip install nox
       - name: Run flake8
         run: nox -s lint
+
+  typing:
+    name: Typing
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.11.0]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: pip install nox
+      - name: Run mypy
+        run: nox -s typing
